cli/tests/default/e2e/snapshots/test_rule_validation/test_validation_of_invalid_rules/rulesinvalid-rulesmissing-hyphen.yaml-core-only/results.txt
Configuration is invalid - found 2 configuration error(s), and 0 rule(s).
semgrep error: Invalid rule schema
  --> rules/invalid-rules/missing-hyphen.yaml:4
4 |   - pattern: |
  |     ^

Expected object with only one entry -- did you forget a hyphen?

[ERROR] Rule parse error in rule eqeq:
 Expected object with only one entry -- did you forget a hyphen?
